tests/fixtures/invalid/pow_list_list_float.py
# Cannot call pow() with List[int], List[int], Float
x = pow([1, 2, 3], [1, 2, 3], 1.0)
